--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
- 
-<body>
-  <h1>Gaffyn Land</h1>
-  <p>Welcome to my mind!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
+  </head>
+  <body>
+    <script src="sketch2.js"></script>
+  </body>
 </html>
